// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spacing deve renderizar corretamente 1`] = `
<div
  class="css-182ieb3"
>
  Content
</div>
`;

exports[`Spacing deve renderizar corretamente 2`] = `
<div
  class="css-jjzf72"
>
  Content
</div>
`;
